# proxy-protocol-codec

./: Cargo.toml  README.md
.github/workflows/: ci.yml  compatibility.yml
benches/: comparison.rs
src/: lib.rs  v1.rs  v2.rs
src/v1/: model.rs
src/v2/: codec.rs  model.rs
src/v2/codec/: decode.rs  encode.rs
src/v2/codec/encode/: stage.rs
